# resume-agent

./: .env.example  .gitignore  Dockerfile  README.md  ResumeAgent_PRD.docx  Resume_Agent_API_Simple.docx  Resume_Agent_API_Spec.docx  Resume_Agent_ER_Diagrams.docx  Resume_Agent_Flowcharts.docx  Resume_Agent_HLD_LLD.docx  Resume_Agent_HLD_LLD_v2.docx  Resume_Agent_PRD_Updated.docx  flowchart_1_main_pipeline.mermaid  flowchart_2_session_login.mermaid  flowchart_3_api_flow.mermaid  flowchart_4_llm_chains.mermaid  flowchart_5_data_flow.mermaid  main.py  phase2_tasks.md  pyproject.toml  railway.toml  resume_agent_architecture.mermaid  resume_agent_er_db.mermaid  resume_agent_er_domain.mermaid  resume_agent_sequence.mermaid  start.sh  test_run.py
frontend/: index.html  vite.config.js
frontend/src/: App.css  App.jsx  api.js
linkedin_applier/: apply.js  binary_response.json  dropdown_response.json  numeric_response.json  package-lock.json  package.json  utils_DropDown.js  utils_Numeric.js
resume_agent/: api.py  auth.py  main.py
resume_agent/core/: config.py  exceptions.py  models.py  state.py
resume_agent/db/: models.py  repository.py
resume_agent/graph/: checkpointer.py  pipeline.py
resume_agent/llm/: chains.py  client.py  prompts.py
resume_agent/nodes/: job_applier.py  job_ranker.py  job_searcher.py  linkedin_applier.py  package_generator.py  query_generator.py  resume_generator.py  resume_parser.py  resume_tailor.py
resume_agent/utils/: logger.py  pdf_generator.py
sessions/: linkedin_session.json  naukri_session.json  wellfound_session.json
(+8 files in other folders)
